-solve body scrollbar hide/display problem when popup

--- a/resource/theme/default/css/default.css
+++ b/resource/theme/default/css/default.css
@@ -605,7 +605,7 @@ body.modal-open[style] {
 	position: absolute;
 	text-align: center;
 	height: auto;
-	width: 84%;
+	width: 100%;
 	margin-left: 7%;
 	top: 640px;
 	padding-bottom: 70px;
